--- a/examples/layouts/index.html
+++ b/examples/layouts/index.html
@@ -2,9 +2,8 @@
 <head>
   <title>Layouts - HTML5 SDK for Brass Monkey</title>
   
-  <script type="text/javascript" src="/scripts/brassmonkey-swfobject.js"></script>
-  <script type="text/javascript" src="/scripts/brassmonkey-uncompressed.js"></script>
-
+  <script type="text/javascript" src="../../brassmonkey.js"></script>
+  
   <script>
     bm.init({
       name: "Layouts - SDK Examples",
