Made a folder for shared resources such as images. Added a Touch demo(Buggy still, but it's a start.). Added cross domain access to JSBridge.swf, couldn't call into it when it was hosted. Fixed now

--- a/examples/layouts/index.html
+++ b/examples/layouts/index.html
@@ -12,7 +12,7 @@
         touchEnabled: false,
         accelerometerEnabled: false,
         images:[
-          'background.png',
+          '../shared/background.png',
           'bananas.png',
           'pineapple.png',
           'watermelon.png'
