--- a/examples/layouts/index.html
+++ b/examples/layouts/index.html
@@ -1,62 +1,56 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Layouts - HTML5 SDK for Brass Monkey</title>
-  
-  <script type="text/javascript" src="../../brassmonkey.js"></script>
-  
-  <script>
-    bm.init({
-      name: "Layouts - SDK Examples",
-      design: {
-        orientation: "portrait",
-        touchEnabled: false,
-        accelerometerEnabled: false,
-        images:[
-          '../shared/background.png',
-          'bananas.png',
-          'pineapple.png',
-          'watermelon.png'
-        ],
-        layout:[{
-          type:   "image",
-          image:  0,
-          x:      0,
-          y:      0,
-          width:  320,
-          height: 480
-        },{
-          type:   "image",
-          image:  1,
-          x:      9,
-          y:      16,
-          width:  128,
-          height: 128
-        },{
-          type:   "image",
-          image:  2,
-          x:      110,
-          y:      170,
-          width:  128,
-          height: 128
-        },{
-          type:   "image",
-          image:  3,
-          x:      181,
-          y:      336,
-          width:  128,
-          height: 128
-        }]
-      }
-    });
-    
-    bm.onShowSlot(function(color){
-      document.getElementById('slot-color').style.background = color;
-    });
-
-  </script>
+  <link rel="stylesheet" type="text/css" href="../../shared/styles/shared.css">  
 </head>
 <body>
-  <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
+  <div class="header-wrapper">
+    <div class="header">
+      <div class="logo">
+        <a href="/"><img src="../../shared/images/logo.png"/></a>
+      </div>
+      <div class="tabs">
+        <a href="/"><img src="../../shared/images/button-home.png"/></a>
+        <a href="/about"><img src="../../shared/images/button-about.png"/></a>
+        <a href="/developers/"><img src="../../shared/images/button-developers.png"/></a>
+        <a href="/team"><img src="../../shared/images/button-contact.png"/></a>
+      </div>
+    </div>
+  </div>
+  <div class="cookie-crumbs-wrapper">
+    <div class="cookie-crumbs">
+      <span><a href="../../../">Developer SDKs</a></span> > <span><a href="../../">HTML5</a></span> > <span>Basics Example</span>
+    </div>
+  </div>
+  <div class="content">
+    <div class="sub-header">
+      <a href="../../"><img src="../../shared/images/return-examples.png"></a>
+      <img class="logo" src="../../shared/images/html5-icon.png"/>
+      <h1>Layouts</h1>
+      <h2>Example from the HTML5 SDK.</h2>
+      
+    </div>
+    <img class="separator" src="../../shared/images/separator.png"/>
+    <div class="demo">
+      <iframe src="layouts.html"></iframe>
+      <h1>Description</h1>
+      <p>We demonstrate laying out background images and buttons in this example.</p>
+      <a class="download" href="layouts.html">Raw HTML (View Source).<img src="../../shared/images/download-icon.png"/></a>
+    </div>
+    <img class="separator" src="../../shared/images/separator.png"/>
+  </div>
+  
+  <div class="footer">
+    <div class="tabs">
+      <a class="current" href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/developers/">Developers</a>
+      <a href="/team">Contact</a>
+    </div>
+    <div class="copyright">
+      <p>©2011 Brass Monkey. All Rights Reserved.</p>
+    </div>
+  </div>
 </body>
 </html>
-
