Updated to new javascript boost version.

--- a/examples/layouts/layouts.html
+++ b/examples/layouts/layouts.html
@@ -6,6 +6,9 @@
   
   <script>
     bm.init({
+    	swfURL:"../../brassmonkey.swf",
+      bmAppId:"62e822bc0e6b9f22fc158763591845be",
+      bmMaxPlayers:1,
       name: "Layouts - SDK Examples",
       design: {
         orientation: "portrait",
@@ -49,13 +52,22 @@
       }
     });
     
+  	bm.onDeviceAvailable(function(a){  		
+  		a.controlMode=bm.MODE_GAMEPAD;
+  		return a;
+  	});
+    
+    
+    function close() {
+    	bm.close();
+    } ;
     bm.onShowSlot(function(color){
       document.getElementById('slot-color').style.background = color;
     });
 
   </script>
 </head>
-<body style="margin:0px;background:white;">
+<body style="margin:0px;background:white;" onunload="close();">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
 </body>
 </html>
