--- a/examples/layouts/layouts.html
+++ b/examples/layouts/layouts.html
@@ -57,17 +57,13 @@
   		return a;
   	});
     
-    
-    function close() {
-    	bm.close();
-    } ;
     bm.onShowSlot(function(color){
       document.getElementById('slot-color').style.background = color;
     });
 
   </script>
 </head>
-<body style="margin:0px;background:white;" onunload="close();">
+<body style="margin:0px;background:white;">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
 </body>
 </html>
