--- a/examples/layouts/layouts.html
+++ b/examples/layouts/layouts.html
@@ -2,16 +2,23 @@
 <head>
   <title>Layouts - HTML5 SDK for Brass Monkey</title>
   
-  <!--  Include development implementation of brassmonkey.js. 
-        RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
-  <script type="text/javascript" src="../../src/swfobject.js"></script>
-  <script type="text/javascript" src="../../src/brassmonkey.js"></script>
+    <!--  Include development implementation of Brass Monkey. 
+        RECOMMENDED: Use the minified brassmonkey.min.js when deploying. -->
+  <script language="javascript" type="text/javascript" src="../../src/core.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/base64.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/resources.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/device.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/detect.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/flash/swfobject.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/flash/flash.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/websockets/registry.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/websockets/websockets.js" ></script>
   
   <script>
-    bm.init({
+    bm.start({
     	name: "Layouts - SDK Examples",
-      bmMaxPlayers:1,
-      bmAppId:"62e822bc0e6b9f22fc158763591845be",
+      maxPlayers:1,
+      appId:"62e822bc0e6b9f22fc158763591845be",
       swfURL:"../../src/swf/bin/brassmonkey.swf",
       design: {
         orientation: "portrait",
@@ -54,14 +61,9 @@
         }]
       }
     });
-    
-  	bm.onDeviceAvailable(function(a){  		
-  		a.controlMode=bm.MODE_GAMEPAD;
-  		return a;
-  	});
-    
-    bm.onShowSlot(function(color){
-      document.getElementById('slot-color').style.background = color;
+        
+    bm.on('showslotcolor',function(e){
+      document.getElementById('slot-color').style.background = e.color;
     });
 
   </script>
